Fixed misalignment of counters in left menu

--- a/Todoist-userstyles-compact.css
+++ b/Todoist-userstyles-compact.css
@@ -86,7 +86,7 @@ div.project_editor_instance {
 }
 
 .generic_left_list li table td { 
-    padding: 3px 0px !important;
+    padding: 3px 20px 3px 0px !important;
 	font-size: 12pt !important;
 }
 
